src/golden/objects/errors/test.golden/state.fl
	object State A
		state
			A a
			Number q
			String s
			
		ctor obligatory